<resources>
    <string name="app_name">Desafio Integrador 4</string>

    <!-- strings do cadastro e login -->
    <string name="name">Digite seu nome</string>
    <string name="email">Digite seu email</string>
    <string name="password">Digite sua senha</string>
    <string name="repeatPW">Repita sua senha</string>
    <string name="checkbox">Remember</string>
    <string name="login">Login</string>
    <string name="create">Create account</string>

    <!-- strings game -->
    <string name="gameName">Nome do Jogo</string>
    <string name="gameDate">Data lançamento</string>
    <string name="description">Descrição</string>
    <string name="saveGame">Save Game</string>

    <!-- tela home -->
    <string name="search">Search Games</string>

</resources>